--- a/public/css/swatches-2020.scss
+++ b/public/css/swatches-2020.scss
@@ -7,10 +7,10 @@ label.color-swatch,
   &.color-swatch--suede-100 {background-color: #000000;}
   &.color-swatch--100 {background-color: #000000;} 		//black
   &.color-swatch--dual-100 {background-color: #000000;} 		//black
-  &.color-swatch--101 {background-color: #276bb8;} 		//royal
+  &.color-swatch--101 {background-color: #2D348D;} 		//royal
   &.color-swatch--tech-101 {background-color: #99becc;} //royal
   &.color-swatch--102 {background-color: #c02119;} 		//red
-  &.color-swatch--103 {background-color: #92999f;} 		//grey
+  &.color-swatch--103 {background-color: #818285;} 		//grey
   &.color-swatch--ss103 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-103.jpg');}	//black & grey
   &.color-swatch--105 {background-color: #181a44;} 		//navy
   &.color-swatch--silicone-105 {background-color: #536ca7;} //royal
@@ -28,7 +28,7 @@ label.color-swatch,
   &.color-swatch--suede-118 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-suede-118.jpg');}
   &.color-swatch--leather-119 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-leather-119.jpg');}
   &.color-swatch--119 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-leather-119.jpg');}
-  &.color-swatch--121 {background-color: #5d202b;}		//burgundy
+  &.color-swatch--121 {background-color: #741E35;}		//burgundy
   &.color-swatch--122 {background-color: #57553c;}		//olive
   &.color-swatch--124 {background-color: #2B5666;}
   &.color-swatch--mariner-126 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-mariner-126.jpg');}
@@ -39,6 +39,7 @@ label.color-swatch,
   &.color-swatch--132 {background-color: #BFD333;}		//neon green
   &.color-swatch--133 {background-color: #93c75f;}		//ivy
   &.color-swatch--134 {background-color: #58beb9;}		//tempest
+  &.color-swatch--137 {background-color: #391F59;}		//tempest
   &.color-swatch--139 {background-color: #dddcdb;}		//steel
   &.color-swatch--140 {background-color: #9f3b95;}		//berry
   &.color-swatch--141 {background-color: #e36e66;}		//
@@ -74,19 +75,46 @@ label.color-swatch,
   &.color-swatch--199 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-199.jpg');}
 
   &.color-swatch--204 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-204.png');}
-  &.color-swatch--217 {background-color: #8c2f30;}		//adobo red
+  &.color-swatch--217 {background-color: #6A152D;}		//adobo red
   &.color-swatch--218 {background-color: #c9e079;}		//green
   &.color-swatch--219 {background-color: #cff471;}		//
   &.color-swatch--223 {background-color: #85a8cb;}		//
   &.color-swatch--228 {background-color: #2557C5;}		//
+  &.color-swatch--230 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-230.jpg');}
+  &.color-swatch--231 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-231.jpg');}
+  &.color-swatch--232 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-232.jpg');}
+  &.color-swatch--234 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-234.jpg');}
+  &.color-swatch--235 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-235.jpg');}
+  &.color-swatch--237 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-237.jpg');}
+  //&.color-swatch--239 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-239.jpg');}
+  //&.color-swatch--240 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-240.jpg');}
+  //&.color-swatch--241 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-241.jpg');}
+  //&.color-swatch--242 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-242.jpg');}
   &.color-swatch--sleeper-249 {background-color: #38373d; border-right: 10px solid #e3c698;}
   &.color-swatch--249 {background-color: #dfb043; border-top: 7px solid #0d0d0f; border-bottom: 7px solid #0d0d0f;}
+
   &.color-swatch--250 {background-color: #78CCC9;}		//mint
   &.color-swatch--silicone-250 {background-color: #7bc5a4;}		//aqua
   &.color-swatch--dual-250 {background-image: url('//b2b.chums.com/images/swatches/2020/250-swatch-angle.jpg');}
   &.color-swatch--baja-257 {background-color: #276bb8;}		//baja-urban black multi stripe
   &.color-swatch--264 {background-color: #ebc121;}		//mango
+  &.color-swatch--271 {background-color: #BAB092;}		//natural
+  &.color-swatch--274 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-274.jpg');}
+  &.color-swatch--275 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-275.jpg');}
+  &.color-swatch--276 {background-color: #2D338C;}      //cobalt
+  &.color-swatch--279 {background-color: #BE9E7E;}      //camel
+  &.color-swatch--280 {background-color: #E3605A;}      //red coral
+  &.color-swatch--281 {background-color: #575B87;}      //periwinkle
+  &.color-swatch--282 {background-color: #50B4A5;}      //seafoam
+  &.color-swatch--283 {background-color: #C7DA44;}      //citrus
+  &.color-swatch--284 {background-color: #E3605A;}      //coral
   &.color-swatch--290 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-290.png');}
+  &.color-swatch--294 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-294.jpg');}
+  &.color-swatch--295 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-295.jpg');}
+  &.color-swatch--296 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-296.jpg');}
+  &.color-swatch--297 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-297.jpg');}
+  &.color-swatch--298 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-298.jpg');}
+  &.color-swatch--299 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-299.jpg');}
 
   &.color-swatch--300 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-300.png');}
   &.color-swatch--306 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-306.jpg');}	//black & grey
@@ -196,6 +224,7 @@ label.color-swatch,
   &.color-swatch--702 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-702.png');}	//rasta-tie-dye
   &.color-swatch--704 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-704.png');}	//sky-dye
   &.color-swatch--706 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-706.png');}	//marine-tie-dye
+  &.color-swatch--707 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-707.jpg');}
   &.color-swatch--ltd-707 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-ltd-707.jpg');}
   &.color-swatch--baja-708 {background-color: #000000;}		//baja-urban black plaid
   &.color-swatch--710 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-710.jpg');}	//brown digicamo
@@ -203,7 +232,7 @@ label.color-swatch,
   &.color-swatch--713 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-rope-713.jpg');}
   &.color-swatch--715 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-715.jpg');} //rasta
   &.color-swatch--719 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-719.png');}
-  &.color-swatch--720 {background-color: #266252;}
+  &.color-swatch--720 {background-color: #123B1D;}    //dark green
   &.color-swatch--724 {background-color: #713e3d;}
   &.color-swatch--748 {background-color: #6d7f97;}		//blue
   &.color-swatch--749 {background-color: #e1e1e1;}		//silver
@@ -278,6 +307,7 @@ label.color-swatch,
 
 
   &.color-swatch--ss903 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-ss-angled-903.jpg');}
+  &.color-swatch--911 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-911.jpg');}
   &.color-swatch--ltd-911 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-ltd-911.jpg');}
   &.color-swatch--915 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-915.png');}
   &.color-swatch--916 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-916.png');}
