fix: hide disabled menu items.

--- a/public/css/swatches-2020.css
+++ b/public/css/swatches-2020.css
@@ -398,10 +398,35 @@ label.color-swatch.color-swatch--235,
 .color-swatch.color-swatch--235 {
   background-image: url("//b2b.chums.com/images/swatches/2024/swatch-235.jpg");
 }
+label.color-swatch.color-swatch--236,
+.tag--swatch.color-swatch--236,
+.color-swatch.color-swatch--236 {
+  background-image: url("//b2b.chums.com/images/swatches/2024/swatch-236.jpg");
+}
 label.color-swatch.color-swatch--237,
 .tag--swatch.color-swatch--237,
 .color-swatch.color-swatch--237 {
   background-image: url("//b2b.chums.com/images/swatches/2024/swatch-237.jpg");
+}
+label.color-swatch.color-swatch--239,
+.tag--swatch.color-swatch--239,
+.color-swatch.color-swatch--239 {
+  background-image: url("//b2b.chums.com/images/swatches/2024/swatch-239.jpg");
+}
+label.color-swatch.color-swatch--240,
+.tag--swatch.color-swatch--240,
+.color-swatch.color-swatch--240 {
+  background-image: url("//b2b.chums.com/images/swatches/2024/swatch-240.jpg");
+}
+label.color-swatch.color-swatch--241,
+.tag--swatch.color-swatch--241,
+.color-swatch.color-swatch--241 {
+  background-image: url("//b2b.chums.com/images/swatches/2024/swatch-241.jpg");
+}
+label.color-swatch.color-swatch--242,
+.tag--swatch.color-swatch--242,
+.color-swatch.color-swatch--242 {
+  background-image: url("//b2b.chums.com/images/swatches/2024/swatch-242.jpg");
 }
 label.color-swatch.color-swatch--sleeper-249,
 .tag--swatch.color-swatch--sleeper-249,
@@ -445,6 +470,16 @@ label.color-swatch.color-swatch--271,
 .tag--swatch.color-swatch--271,
 .color-swatch.color-swatch--271 {
   background-color: #BAB092;
+}
+label.color-swatch.color-swatch--272,
+.tag--swatch.color-swatch--272,
+.color-swatch.color-swatch--272 {
+  background-image: url("//b2b.chums.com/images/swatches/2024/swatch-272.jpg");
+}
+label.color-swatch.color-swatch--273,
+.tag--swatch.color-swatch--273,
+.color-swatch.color-swatch--273 {
+  background-image: url("//b2b.chums.com/images/swatches/2024/swatch-275.jpg");
 }
 label.color-swatch.color-swatch--274,
 .tag--swatch.color-swatch--274,
@@ -490,6 +525,26 @@ label.color-swatch.color-swatch--284,
 .tag--swatch.color-swatch--284,
 .color-swatch.color-swatch--284 {
   background-color: #E3605A;
+}
+label.color-swatch.color-swatch--285,
+.tag--swatch.color-swatch--285,
+.color-swatch.color-swatch--285 {
+  background-image: url("//b2b.chums.com/images/swatches/2024/swatch-285.jpg");
+}
+label.color-swatch.color-swatch--286,
+.tag--swatch.color-swatch--286,
+.color-swatch.color-swatch--286 {
+  background-image: url("//b2b.chums.com/images/swatches/2024/swatch-286.jpg");
+}
+label.color-swatch.color-swatch--287,
+.tag--swatch.color-swatch--287,
+.color-swatch.color-swatch--287 {
+  background-image: url("//b2b.chums.com/images/swatches/2024/swatch-287.jpg");
+}
+label.color-swatch.color-swatch--288,
+.tag--swatch.color-swatch--288,
+.color-swatch.color-swatch--288 {
+  background-image: url("//b2b.chums.com/images/swatches/2024/swatch-288.jpg");
 }
 label.color-swatch.color-swatch--290,
 .tag--swatch.color-swatch--290,
@@ -780,6 +835,11 @@ label.color-swatch.color-swatch--408,
 .tag--swatch.color-swatch--408,
 .color-swatch.color-swatch--408 {
   background-image: url("//b2b.chums.com/images/swatches/2022/swatch-408.jpg");
+}
+label.color-swatch.color-swatch--449,
+.tag--swatch.color-swatch--449,
+.color-swatch.color-swatch--449 {
+  background-image: url("//b2b.chums.com/images/swatches/2024/swatch-449.jpg");
 }
 label.color-swatch.color-swatch--450,
 .tag--swatch.color-swatch--450,
