--- a/public/css/swatches-2020.scss
+++ b/public/css/swatches-2020.scss
@@ -85,11 +85,12 @@ label.color-swatch,
   &.color-swatch--232 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-232.jpg');}
   &.color-swatch--234 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-234.jpg');}
   &.color-swatch--235 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-235.jpg');}
+  &.color-swatch--236 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-236.jpg');}
   &.color-swatch--237 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-237.jpg');}
-  //&.color-swatch--239 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-239.jpg');}
-  //&.color-swatch--240 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-240.jpg');}
-  //&.color-swatch--241 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-241.jpg');}
-  //&.color-swatch--242 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-242.jpg');}
+  &.color-swatch--239 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-239.jpg');}
+  &.color-swatch--240 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-240.jpg');}
+  &.color-swatch--241 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-241.jpg');}
+  &.color-swatch--242 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-242.jpg');}
   &.color-swatch--sleeper-249 {background-color: #38373d; border-right: 10px solid #e3c698;}
   &.color-swatch--249 {background-color: #dfb043; border-top: 7px solid #0d0d0f; border-bottom: 7px solid #0d0d0f;}
 
@@ -99,6 +100,8 @@ label.color-swatch,
   &.color-swatch--baja-257 {background-color: #276bb8;}		//baja-urban black multi stripe
   &.color-swatch--264 {background-color: #ebc121;}		//mango
   &.color-swatch--271 {background-color: #BAB092;}		//natural
+  &.color-swatch--272 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-272.jpg');}
+  &.color-swatch--273 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-275.jpg');}
   &.color-swatch--274 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-274.jpg');}
   &.color-swatch--275 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-275.jpg');}
   &.color-swatch--276 {background-color: #2D338C;}      //cobalt
@@ -108,6 +111,10 @@ label.color-swatch,
   &.color-swatch--282 {background-color: #50B4A5;}      //seafoam
   &.color-swatch--283 {background-color: #C7DA44;}      //citrus
   &.color-swatch--284 {background-color: #E3605A;}      //coral
+  &.color-swatch--285 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-285.jpg');}
+  &.color-swatch--286 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-286.jpg');}
+  &.color-swatch--287 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-287.jpg');}
+  &.color-swatch--288 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-288.jpg');}
   &.color-swatch--290 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-290.png');}
   &.color-swatch--294 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-294.jpg');}
   &.color-swatch--295 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-295.jpg');}
@@ -174,6 +181,7 @@ label.color-swatch,
   &.color-swatch--405 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-405.jpg');}
   &.color-swatch--406 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-406.jpg');}
   &.color-swatch--408 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-408.jpg');}
+  &.color-swatch--449 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-449.jpg');}
 
   &.color-swatch--450 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-450.jpg');}
   &.color-swatch--reversi-450 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-450.jpg');}
