feat: swatch updates

--- a/public/css/swatches-2020.css
+++ b/public/css/swatches-2020.css
@@ -566,6 +566,21 @@ label.color-swatch.color-swatch--296,
 .color-swatch.color-swatch--296 {
   background-image: url("//b2b.chums.com/images/swatches/2024/swatch-296.jpg");
 }
+label.color-swatch.color-swatch--ss294,
+.tag--swatch.color-swatch--ss294,
+.color-swatch.color-swatch--ss294 {
+  background-image: url("//b2b.chums.com/images/swatches/2024/swatch-294.jpg");
+}
+label.color-swatch.color-swatch--ss295,
+.tag--swatch.color-swatch--ss295,
+.color-swatch.color-swatch--ss295 {
+  background-image: url("//b2b.chums.com/images/swatches/2024/swatch-295.jpg");
+}
+label.color-swatch.color-swatch--ss296,
+.tag--swatch.color-swatch--ss296,
+.color-swatch.color-swatch--ss296 {
+  background-image: url("//b2b.chums.com/images/swatches/2024/swatch-296.jpg");
+}
 label.color-swatch.color-swatch--297,
 .tag--swatch.color-swatch--297,
 .color-swatch.color-swatch--297 {
@@ -640,6 +655,11 @@ label.color-swatch.color-swatch--315,
 .tag--swatch.color-swatch--315,
 .color-swatch.color-swatch--315 {
   background-image: url("//b2b.chums.com/images/swatches/2020/swatch-315.jpg");
+}
+label.color-swatch.color-swatch--318,
+.tag--swatch.color-swatch--318,
+.color-swatch.color-swatch--318 {
+  background-image: url("//b2b.chums.com/images/swatches/2024/swatch-318.jpg");
 }
 label.color-swatch.color-swatch--319,
 .tag--swatch.color-swatch--319,
@@ -721,6 +741,11 @@ label.color-swatch.color-swatch--353,
 .color-swatch.color-swatch--353 {
   background-image: url("//b2b.chums.com/images/swatches/2022/swatch-353.png");
 }
+label.color-swatch.color-swatch--354,
+.tag--swatch.color-swatch--354,
+.color-swatch.color-swatch--354 {
+  background-image: url("//b2b.chums.com/images/swatches/2024/swatch-354.jpg");
+}
 label.color-swatch.color-swatch--355,
 .tag--swatch.color-swatch--355,
 .color-swatch.color-swatch--355 {
@@ -800,6 +825,11 @@ label.color-swatch.color-swatch--370,
 .tag--swatch.color-swatch--370,
 .color-swatch.color-swatch--370 {
   background-color: #4aa6b0;
+}
+label.color-swatch.color-swatch--371,
+.tag--swatch.color-swatch--371,
+.color-swatch.color-swatch--371 {
+  background-image: url("//b2b.chums.com/images/swatches/2024/swatch-371.jpg");
 }
 label.color-swatch.color-swatch--374,
 .tag--swatch.color-swatch--374,
@@ -1027,6 +1057,11 @@ label.color-swatch.color-swatch--ss662,
 .tag--swatch.color-swatch--ss662,
 .color-swatch.color-swatch--ss662 {
   background-image: url("//b2b.chums.com/images/swatches/2022/swatch-662.png");
+}
+label.color-swatch.color-swatch--699,
+.tag--swatch.color-swatch--699,
+.color-swatch.color-swatch--699 {
+  background-image: url("//b2b.chums.com/images/swatches/2024/swatch-699.jpg");
 }
 label.color-swatch.color-swatch--701,
 .tag--swatch.color-swatch--701,
