--- a/public/css/swatches-2020.scss
+++ b/public/css/swatches-2020.scss
@@ -119,6 +119,9 @@ label.color-swatch,
   &.color-swatch--294 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-294.jpg');}
   &.color-swatch--295 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-295.jpg');}
   &.color-swatch--296 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-296.jpg');}
+  &.color-swatch--ss294 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-294.jpg');}
+  &.color-swatch--ss295 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-295.jpg');}
+  &.color-swatch--ss296 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-296.jpg');}
   &.color-swatch--297 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-297.jpg');}
   &.color-swatch--298 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-298.jpg');}
   &.color-swatch--299 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-299.jpg');}
@@ -134,7 +137,8 @@ label.color-swatch,
   &.color-swatch--312 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-312.jpg');}	//
   &.color-swatch--313 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-313.jpg');}	//
   &.color-swatch--314 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-314.jpg');}	//
-  &.color-swatch--315 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-315.jpg');}	//
+  &.color-swatch--315 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-315.jpg');}
+  &.color-swatch--318 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-318.jpg');}
   &.color-swatch--319 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-ratchet-319.jpg');}
   &.color-swatch--320 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-rope-320.jpg');}
   &.color-swatch--rope-329 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-rope-329.jpg');}
@@ -157,6 +161,7 @@ label.color-swatch,
 
   &.color-swatch--352 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-352.jpg');}  //realtree wave
   &.color-swatch--353 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-353.png');}
+  &.color-swatch--354 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-354.jpg');}
   &.color-swatch--355 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-355.png');}
   &.color-swatch--dual-356 {background-image: url('//b2b.chums.com/images/swatches/2020/356-swatch-angle.jpg');}
   &.color-swatch--ss356 {background-image: url('//b2b.chums.com/images/swatches/2020/356-TRI-swatch-angle.jpg');}
@@ -173,6 +178,7 @@ label.color-swatch,
   &.color-swatch--368 {background-color: #712b2b;}		//pomegranate
   &.color-swatch--369 {background-color: #dca448;}		//marigold
   &.color-swatch--370 {background-color: #4aa6b0;}		//teal
+  &.color-swatch--371 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-371.jpg');}
   &.color-swatch--374 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-374.jpg');}
   &.color-swatch--ss374 {background-image: url('//b2b.chums.com/images/swatches/2020/374-TRI-swatch-angle.jpg');}
   &.color-swatch--390 {background-color: #64534f;}		//fudge
@@ -225,6 +231,7 @@ label.color-swatch,
   &.color-swatch--ss660 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-660.png');}
   &.color-swatch--662 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-662.png');}
   &.color-swatch--ss662 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-662.png');}
+  &.color-swatch--699 {background-image: url('//b2b.chums.com/images/swatches/2024/swatch-699.jpg');}
 
   &.color-swatch--701 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-701.png');}	//rainbow-tie-dye
   &.color-swatch--ltd-701 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-ltd-701.jpg');}	//rainbow-tie-dye
