--- a/views/index.pug
+++ b/views/index.pug
@@ -23,7 +23,7 @@ html(lang="en-us", prefix="og: https://ogp.me/ns#")
         link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap")
         link(rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap")
         link(rel="stylesheet" href="/css/chums.css?v=" + cssTimestamp)
-        link(rel="stylesheet" href="/css/swatches-2020.css?v=" + swatchTimestamp)
+        link(rel="stylesheet" href="/b2b-swatches/swatches.css?v=" + swatchTimestamp)
 
         script(async src="https://www.googletagmanager.com/gtag/js?id=UA-3648826-6")
         script(async defer src="https://accounts.google.com/gsi/client")
