fix(css): Remove automatic a[href] icons based on file extension, and migrated to explicit classname elements of 'pdf-icon', 'xlsx-icon', etc.

--- a/public/css/chums.scss
+++ b/public/css/chums.scss
@@ -420,25 +420,24 @@ input.telephone-ext {
 }
 
 a {
-  &[href $=".pdf"],
-  &.pdf {
+  &.pdf,
+  &.pdf-icon {
     background: url($cdn + "/images/icons/Adobe_PDF_file_icon_24x24.png") center right no-repeat;
     padding: 0 2rem 0 0;
     background-size: contain;
   }
 
-  &[href $=".xls"],
   &.xls,
-  &[href $=".xlsx"],
-  &[href $=".xlsm"] {
+  &.xlsx,
+  &.xlsx-icon {
     background: url($cdn + "/images/icons/Microsoft_Excel_2013_logo.svg") center right no-repeat;
     padding: 0 2rem 0 0;
     background-size: contain;
   }
 
-  &[href $=".ppt"],
   &.ppt,
-  &[href $=".pptx"],
+  &.ppt-icon,
+  &.pptx-icon
   &.pptx {
     background: url($cdn + "/images/icons/Microsoft_PowerPoint_2013_logo.svg") center right no-repeat;
     padding: 0 2rem 0 0;
