--- a/public/css/chums.css
+++ b/public/css/chums.css
@@ -14160,17 +14160,17 @@ input.telephone-ext {
     transform: translate(-100%, 0);
   }
 }
-a[href$=".pdf"], a.pdf {
+a.pdf, a.pdf-icon {
   background: url("/images/icons/Adobe_PDF_file_icon_24x24.png") center right no-repeat;
   padding: 0 2rem 0 0;
   background-size: contain;
 }
-a[href$=".xls"], a.xls, a[href$=".xlsx"], a[href$=".xlsm"] {
+a.xls, a.xlsx, a.xlsx-icon {
   background: url("/images/icons/Microsoft_Excel_2013_logo.svg") center right no-repeat;
   padding: 0 2rem 0 0;
   background-size: contain;
 }
-a[href$=".ppt"], a.ppt, a[href$=".pptx"], a.pptx {
+a.ppt, a.ppt-icon, a.pptx-icon a.pptx {
   background: url("/images/icons/Microsoft_PowerPoint_2013_logo.svg") center right no-repeat;
   padding: 0 2rem 0 0;
   background-size: contain;
