--- a/public/css/chums.css
+++ b/public/css/chums.css
@@ -11993,7 +11993,7 @@ html {
 body {
   background-color: transparent;
   font-family: "Roboto Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  background-image: url("//b2b.chums.com/images/chums/mountain-footer.webp");
+  background-image: url("/images/chums/mountain-footer.webp");
   background-position: bottom;
   background-repeat: repeat-x;
   padding-bottom: 130px;
@@ -14145,17 +14145,17 @@ input.telephone-ext {
     transform: translate(-100%, 0);
   }
 }
-a[href$=".pdf"], a.pdf {
+a.pdf, a.pdf-icon {
   background: url("/images/icons/Adobe_PDF_file_icon_24x24.png") center right no-repeat;
   padding: 0 2rem 0 0;
   background-size: contain;
 }
-a[href$=".xls"], a.xls, a[href$=".xlsx"], a[href$=".xlsm"] {
+a.xls, a.xlsx, a.xlsx-icon {
   background: url("/images/icons/Microsoft_Excel_2013_logo.svg") center right no-repeat;
   padding: 0 2rem 0 0;
   background-size: contain;
 }
-a[href$=".ppt"], a.ppt, a[href$=".pptx"], a.pptx {
+a.ppt, a.ppt-icon, a.pptx-icon a.pptx {
   background: url("/images/icons/Microsoft_PowerPoint_2013_logo.svg") center right no-repeat;
   padding: 0 2rem 0 0;
   background-size: contain;
