--- a/public/css/navbar.scss
+++ b/public/css/navbar.scss
@@ -298,7 +298,7 @@
         top: 10px;
         left: 0;
         right: 0;
-        margin: -10px  auto auto;
+        margin: auto auto;
         transition: all 0.35s ease-in-out;
         //margin-top: ;
 
