--- a/public/css/chums.scss
+++ b/public/css/chums.scss
@@ -1,5 +1,5 @@
 @import './variables.scss';
-//@import '../../node_modules/bootstrap/scss/bootstrap-grid';
+@import '../../node_modules/bootstrap/scss/bootstrap-grid';
 
 :root {
   --chums-red: #d0112b;
