--- a/public/css/chums.scss
+++ b/public/css/chums.scss
@@ -3,6 +3,7 @@
 
 :root {
   --chums-red: #d0112b;
+  --chums-grey: #8a8a8d;
   --mountain-footer-height: 130px;
 
   --footer-links-height: 40px;
@@ -70,4 +71,22 @@ a {
   font-size: 75%;
   max-height: 350px;
   overflow: auto;
+}
+
+.icon-set {
+  float: right;
+  display: flex;
+  margin-left: 1rem;
+  flex-direction: column;
+
+  .icon {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+
+.ba-icon,
+.fr-icon {
+  float: right;
+  margin-left: 1rem;
 }
