disable "add to cart" button while adding to cart.

--- a/public/css/chums.scss
+++ b/public/css/chums.scss
@@ -441,7 +441,7 @@ a {
 
   &.ppt,
   &.ppt-icon,
-  &.pptx-icon
+  &.pptx-icon,
   &.pptx {
     background: url($cdn + "/images/icons/Microsoft_PowerPoint_2013_logo.svg") center right no-repeat;
     padding: 0 2rem 0 0;
