--- a/public/css/chums.scss
+++ b/public/css/chums.scss
@@ -1,4 +1,4 @@
-@import './variables.scss';
+//@import './variables.scss';
 @import '../../node_modules/bootstrap/scss/bootstrap-grid';
 
 :root {
@@ -10,13 +10,15 @@
   --footer-contacts-padding: 1.5rem;
   --social-icon-size: 25px;
   --footer-top-margin: 0;
+
+  --resources-h4-color: #5f5f5f;
 }
 
 
 a {
   &.pdf,
   &.pdf-icon {
-    background: url($cdn + "/images/icons/Adobe_PDF_file_icon_24x24.png") center right no-repeat;
+    background: url("/images/icons/Adobe_PDF_file_icon_24x24.png") center right no-repeat;
     padding: 0 2rem 0 0;
     background-size: contain;
   }
@@ -24,7 +26,7 @@ a {
   &.xls,
   &.xlsx,
   &.xlsx-icon {
-    background: url($cdn + "/images/icons/Microsoft_Excel_2013_logo.svg") center right no-repeat;
+    background: url("/images/icons/Microsoft_Excel_2013_logo.svg") center right no-repeat;
     padding: 0 2rem 0 0;
     background-size: contain;
   }
@@ -33,13 +35,13 @@ a {
   &.ppt-icon,
   &.pptx-icon,
   &.pptx {
-    background: url($cdn + "/images/icons/Microsoft_PowerPoint_2013_logo.svg") center right no-repeat;
+    background: url("/images/icons/Microsoft_PowerPoint_2013_logo.svg") center right no-repeat;
     padding: 0 2rem 0 0;
     background-size: contain;
   }
 
   &.external {
-    background: url($cdn + "/images/generic/external.png") center right no-repeat;
+    background: url("/images/generic/external.png") center right no-repeat;
     padding: 0 2rem 0 0;
     background-size: contain;
   }
@@ -56,7 +58,7 @@ a {
   h4 {
     margin-top: 1.5rem;
     font-size: 1rem;
-    color: $text-color;
+    color: var(--resources-h4-color);
   }
 }
 
